<resources>
    <string name="app_name">LeShare</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--hint-->
    <string name="input_hint_username">Username</string>
    <string name="input_hint_password">Password</string>
    <string name="input_hint_email">Email</string>

    <!--LoginActivity -->
    <string name="title_activity_login">Login</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="login_signup_label">Don\'t have an account? Sign Up!</string>
    <string name="login_error_msg">Please make sure you enter a username and password.</string>
    <string name="login_error_title">Oops!!</string>

    <!--SignUpActivity -->
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="button_signup_label">SIGN UP</string>
    <string name="button_cancel_label">CANCEL</string>
    <string name="signup_error_msg">Please make sure you enter a username, password and your email address.</string>
    <string name="signup_error_title">Oops!!</string>


    <!--Menu -->
    <string name="menu_logout_label">Log out</string>
    <string name="tab_title_section1">Inbox</string>
    <string name="tab_title_section2">Friends</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="inbox_empty_label">No New Message</string>
    <string name="friend_empty_label">Add Friends to begin!</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We\'re sorry.</string>
    <string name="menu_camera_label">Camera</string>
    <string name="msg_general_error">Sorry, there was a error!</string>
    <string name="msg_error_external_storage">Can\'t accress external storage in your device.</string>
    <string name="msg_error_opening_file">Can\'t open file from device.</string>


    <string-array name="camera_choices">
        <item name="camera_item_take_pic">Take Picture</item>
        <item name="camera_item_take_video">Take video</item>
        <item name="camera_item_choose_pic">Choose Picture</item>
        <item name="camera_item_choose_video">Choose Video</item>
    </string-array>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="msg_empty_reciptents_list">Choose some friends first.</string>
    <string name="action_send_msg">Send</string>
    <string name="msg_error_selecting_file">There was an error with the file selected. Please select a different file</string>
    <string name="msg_error_selecting_file_title">We are sorry!</string>
    <string name="title_activity_view_image">ViewImageActivity</string>
    <string name="content_description_background">Frog background image</string>
    <string name="subtitle">Photo, Video, Share and then Destroy</string>
    <string name="content_desc_user_avatar">User avatar</string>
    <string name="gridview_default_username">Username</string>
    <string name="User_check_mark">user check mark</string>
    <string name="msg_push">"You have a new message from %s!"</string>


</resources>
