<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="androidpath.ll.leshare.View.SignUpActivity"
              android:orientation="vertical">


    <EditText
        android:id="@+id/signup_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_progressBar"
        android:ems="10"
        android:hint="@string/input_hint_username"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/signup_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/input_hint_password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/signup_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_input_password"
        android:ems="10"
        android:hint="@string/input_hint_email"
        android:inputType="textEmailAddress"
        />

    <ProgressBar
        android:id="@+id/signup_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        />

    <Button
        android:id="@+id/signup_btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_signup_label"
        />

</LinearLayout>
