<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="androidpath.ll.leshare.View.LoginActivity"
                android:background="@drawable/bg_login"
    >

    <LinearLayout
        android:id="@+id/login_layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="150dp"
        android:paddingBottom="10dp">

        <EditText
            android:id="@+id/login_username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_hint_username"
            android:maxLength="30"
            android:singleLine="true"
            android:textColorHint="@android:color/white">

            <requestFocus/>
        </EditText>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_layout_username"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <EditText
            android:id="@+id/login_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_hint_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true"
            android:textColorHint="@android:color/white"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_layout_password"
        android:text="@string/login_button_label"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/login_signUp_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/login_signup_label"
        android:layout_below="@+id/btn_login"
        android:paddingTop="50dp"
        android:clickable="true"
        android:textColor="@android:color/white"/>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_progressBar"
        android:layout_below="@+id/btn_login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        android:indeterminate="false"/>


</RelativeLayout>
